--- a/.github/workflows/spotify-play-tribookpro.yml
+++ b/.github/workflows/spotify-play-tribookpro.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Play Bad Day
 
 on: [push]
 
@@ -15,7 +15,7 @@ jobs:
       uses: SvanBoxel/spotify-action@1.0.3
       with:
         # Spotify token: Visit https://developer.spotify.com/console/get-search-item/ and click "Get token"
-        token: BQD-OBYsbn9-dP0lz0vCBm-mX-83ptYWp49ELOTjhchnDtCWuLwkdbRg3zsHc_ptNBP0hY176dijGAuU3DyK8O0UtG0GvlVE4J3UKHRYHd6QWNc2GQiYU5wp28eaiA3i8lgWFmKuGHOsKeNjHcy1JzdlkiY
+        token: BQDi7Dc4pE1lyZsBsWKiHbpu4kcNNNOjf2nFcTsfBwiPj3m33Q3nFBlt_uhrY0Emr3JTXr-Qwc_ryBgh-rVVvig86o2sYAswj3kPtS-WwPq56qXxUj-U_eUwlw82IaL5hn5SJnSBPFQpXuO3QPstp-2alwxl62w
         # Song to search for
         song: Daniel Powter - Bad Day
         # Spotify device_id (https://developer.spotify.com/documentation/web-api/reference/player/get-a-users-available-devices/)
