--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -1,6 +1,10 @@
-name: CI
+name: LGTM reaction
 
-on: [push]
+on:
+  issue_comment:
+    types: [created]
+  pull_request_review:
+    types: [submitted]
 
 jobs:
   build:
@@ -13,5 +17,9 @@ jobs:
       run: echo Hello, world!
     - name: LGTM Reaction 1
       uses: micnncim/action-lgtm-reaction@v0.6.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
     - name: LGTM Reaction 2
       uses: hayuna/giphy@v1.8
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
