--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -23,3 +23,8 @@ jobs:
       uses: hayuna/giphy@v1.8
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
+    - name: LGTM Reaction Tri
+      uses: ddradar/lgtm-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        image-url: "https://kodeworks.no/assets/peoples/tmn.jpg"
