--- a/.github/workflows/play-that-song-on-tribook.yml
+++ b/.github/workflows/play-that-song-on-tribook.yml
@@ -2,7 +2,7 @@ name: Play That Song!
 
 on:
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '*/10 * * * *'
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run a one-line script
       run: echo Hello, world! :D
-    - name: Spotify - Play
+    - name: Play Thunderstruck
       uses: SvanBoxel/spotify-action@1.0.3
       with:
         # Spotify token: Visit https://developer.spotify.com/console/get-search-item/ and click "Get token"
