--- a/.github/workflows/play-thunderstruck-on-tribook.yml
+++ b/.github/workflows/play-thunderstruck-on-tribook.yml
@@ -2,17 +2,14 @@ name: Play Thunderstruck on Tribook!
 
 on:
   schedule:
-    - cron:  '*/10 * * * *'
+    - cron:  '* * * * *'
 
 jobs:
-  build:
+  play:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world! :D
     - name: Play Thunderstruck
       uses: SvanBoxel/spotify-action@1.0.3
       with:
