--- a/.github/workflows/play-thunderstruck-on-tribook.yml
+++ b/.github/workflows/play-thunderstruck-on-tribook.yml
@@ -2,7 +2,7 @@ name: Play Thunderstruck on Tribook!
 
 on:
   schedule:
-    - cron:  '* * * * *'
+    - cron:  '*/15 * * * *'
 
 jobs:
   play:
@@ -13,6 +13,7 @@ jobs:
     - name: Play Thunderstruck
       uses: SvanBoxel/spotify-action@1.0.3
       with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
         # Spotify token: Visit https://developer.spotify.com/console/get-search-item/ and click "Get token"
         token: BQDi7Dc4pE1lyZsBsWKiHbpu4kcNNNOjf2nFcTsfBwiPj3m33Q3nFBlt_uhrY0Emr3JTXr-Qwc_ryBgh-rVVvig86o2sYAswj3kPtS-WwPq56qXxUj-U_eUwlw82IaL5hn5SJnSBPFQpXuO3QPstp-2alwxl62w
         # Song to search for
